--- a/index.html
+++ b/index.html
@@ -336,7 +336,11 @@
         <div class="hero-wrapper overflow-hidden">
           <div class="container">
             <div class="hero-container position-relative">
-              <div class="hero-content" data-aos="fade-up">
+              <div
+                class="hero-content"
+                data-aos="fade-up"
+                data-aos-duration="1000"
+              >
                 <h6>DEBT COLLECTION EXPERTS IN TASMANIA</h6>
                 <h1>
                   No Collection, <br />
@@ -372,7 +376,11 @@
       <section id="Experts">
         <div class="experts-wrapper section-spacing overflow-hidden">
           <div class="container">
-            <div class="section-title experts-title" data-aos="fade-down">
+            <div
+              class="section-title experts-title"
+              data-aos="fade-down"
+              data-aos-duration="1000"
+            >
               <h2>
                 Debt Collection and recovery experts trusted by local Tasmanians
               </h2>
@@ -380,16 +388,25 @@
             <div class="experts-container">
               <div class="row">
                 <div class="col-lg-5">
-                  <div class="experts-img" data-aos="fade-right">
-                    <img
-                      loading="lazy"
-                      src="assets/images/home-experts-img.webp"
-                      alt="home-experts-img"
-                    />
+                  <div
+                    class="experts-img"
+                    data-aos="fade-right"
+                    data-aos-duration="1000"
+                  >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/about-us.html"
+                      ><img
+                        src="assets/images/home-experts-img.webp"
+                        alt="home-experts-img"
+                    /></a>
                   </div>
                 </div>
                 <div class="col-lg-7">
-                  <div class="experts-content" data-aos="fade-left">
+                  <div
+                    class="experts-content"
+                    data-aos="fade-left"
+                    data-aos-duration="1000"
+                  >
                     <p>
                       With over 20 years of experience and endorsed by 2,000+
                       businesses, we specialise in
@@ -450,6 +467,7 @@
         <div
           class="preferred-wrapper section-spacing overflow-hidden"
           data-aos="fade-down-right"
+          data-aos-duration="1000"
         >
           <div class="container">
             <div class="preferred-top section-title">
@@ -465,59 +483,33 @@
             <div class="preferred-brands">
               <div class="brand-logo">
                 <img
-                  loading="lazy"
                   src="assets/images/spectran-logo.svg"
                   alt="spectran-logo"
                 />
               </div>
               <div class="brand-logo">
-                <img
-                  loading="lazy"
-                  src="assets/images/tassal-logo.svg"
-                  alt="tassal-logo"
-                />
+                <img src="assets/images/tassal-logo.svg" alt="tassal-logo" />
+              </div>
+              <div class="brand-logo">
+                <img src="assets/images/cat-logo.svg" alt="cat-logo" />
+              </div>
+              <div class="brand-logo">
+                <img src="assets/images/huon-logo.svg" alt="huon-logo" />
+              </div>
+              <div class="brand-logo">
+                <img src="assets/images/tcs-logo.svg" alt="tcs-logo" />
+              </div>
+              <div class="brand-logo">
+                <img src="assets/images/duggans-logo.svg" alt="duggans-logo" />
               </div>
               <div class="brand-logo">
                 <img
-                  loading="lazy"
-                  src="assets/images/cat-logo.svg"
-                  alt="cat-logo"
-                />
-              </div>
-              <div class="brand-logo">
-                <img
-                  loading="lazy"
-                  src="assets/images/huon-logo.svg"
-                  alt="huon-logo"
-                />
-              </div>
-              <div class="brand-logo">
-                <img
-                  loading="lazy"
-                  src="assets/images/tcs-logo.svg"
-                  alt="tcs-logo"
-                />
-              </div>
-              <div class="brand-logo">
-                <img
-                  loading="lazy"
-                  src="assets/images/duggans-logo.svg"
-                  alt="duggans-logo"
-                />
-              </div>
-              <div class="brand-logo">
-                <img
-                  loading="lazy"
                   src="assets/images/hazellbros-logo.svg"
                   alt="hazellbros-logo"
                 />
               </div>
               <div class="brand-logo">
-                <img
-                  loading="lazy"
-                  src="assets/images/doj-logo.svg"
-                  alt="doj-logo"
-                />
+                <img src="assets/images/doj-logo.svg" alt="doj-logo" />
               </div>
             </div>
             <div class="d-flex justify-content-center">
@@ -542,7 +534,11 @@
       <section id="Services">
         <div class="services-wrapper section-spacing overflow-hidden">
           <div class="container">
-            <div class="services-top section-title" data-aos="fade-down">
+            <div
+              class="services-top section-title"
+              data-aos="fade-down"
+              data-aos-duration="1000"
+            >
               <h2>What Debt Collection and recovery services do we offer?</h2>
               <p>
                 Are financial challenges impacting you or your business or
@@ -553,7 +549,7 @@
                 specifically to the unique demands of the Tasmanian market.
               </p>
             </div>
-            <div class="row" data-aos="fade-up">
+            <div class="row" data-aos="fade-up" data-aos-duration="1000">
               <div class="col-md-6 col-lg-4">
                 <article class="service-card">
                   <a
@@ -561,7 +557,6 @@
                   >
                     <div class="services-card-img">
                       <img
-                        loading="lazy"
                         src="assets/images/commercial-debt-collection-img.webp"
                         alt="commercial-debt-collection-img"
                       />
@@ -590,7 +585,6 @@
                   >
                     <div class="services-card-img">
                       <img
-                        loading="lazy"
                         src="assets/images/consumer-debt-collection-img.webp"
                         alt="consumer-debt-collection-img"
                       />
@@ -619,7 +613,6 @@
                   >
                     <div class="services-card-img">
                       <img
-                        loading="lazy"
                         src="assets/images/debt-collector-and-tracking-img.webp"
                         alt="debt-collector-and-tracking-img"
                       />
@@ -648,7 +641,6 @@
                   >
                     <div class="services-card-img">
                       <img
-                        loading="lazy"
                         src="assets/images/debt-recovery-img.webp"
                         alt="debt-recovery-img"
                       />
@@ -677,7 +669,6 @@
                   >
                     <div class="services-card-img">
                       <img
-                        loading="lazy"
                         src="assets/images/personal-debt-collection-img.webp"
                         alt="personal-debt-collection"
                       />
@@ -706,7 +697,6 @@
                   >
                     <div class="services-card-img">
                       <img
-                        loading="lazy"
                         src="assets/images/small-business-debt-collection-img.webp"
                         alt="small-business-debt-collection-img"
                       />
@@ -744,7 +734,11 @@
               class="row guarantee-container flex-column-reverse flex-lg-row"
             >
               <div class="col-lg-6">
-                <div class="guarantee-content" data-aos="fade-up-right">
+                <div
+                  class="guarantee-content"
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                >
                   <h2 class="d-none d-lg-block">
                     No Collection, <br />
                     No Fee Guarantee*!
@@ -779,7 +773,6 @@
               <div class="col-lg-6 col-xl-5">
                 <div class="guarantee-img" data-aos="fade-up-left">
                   <img
-                    loading="lazy"
                     src="assets/images/no-collection-no-fee-guarantee.webp"
                     alt="no-collection-no-fee-guarantee-img"
                   />
@@ -797,7 +790,11 @@
       <section id="Review">
         <div class="review-wrapper section-spacing overflow-hidden">
           <div class="container">
-            <div class="review-top section-title" data-aos="fade-up">
+            <div
+              class="review-top section-title"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
               <h2>
                 Customer reviews: <br />
                 What people are saying about us
@@ -808,7 +805,11 @@
                 recommend us.
               </p>
             </div>
-            <div class="row justify-content-center" data-aos="zoom-in-up">
+            <div
+              class="row justify-content-center"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            >
               <div class="col-md-6 col-lg-4">
                 <div class="review-card">
                   <div
@@ -816,14 +817,12 @@
                   >
                     <div class="client-avatar">
                       <img
-                        loading="lazy"
                         src="assets/images/sarah-avatar.svg"
                         alt="sarah-avatar"
                       />
                     </div>
                     <div class="client-brand-logo">
                       <img
-                        loading="lazy"
                         src="assets/images/spectran-logo.svg"
                         alt="spectran-avatar"
                       />
@@ -855,14 +854,12 @@
                   >
                     <div class="client-avatar">
                       <img
-                        loading="lazy"
                         src="assets/images/bobby-avatar.svg"
                         alt="bobby-avatar"
                       />
                     </div>
                     <div class="client-brand-logo">
                       <img
-                        loading="lazy"
                         src="assets/images/tassal-logo.svg"
                         alt="tassal-avatar"
                       />
@@ -894,17 +891,12 @@
                   >
                     <div class="client-avatar">
                       <img
-                        loading="lazy"
                         src="assets/images/emma-avatar.svg"
                         alt="emma-avatar"
                       />
                     </div>
                     <div class="client-brand-logo">
-                      <img
-                        loading="lazy"
-                        src="assets/images/doj-logo.svg"
-                        alt="doj-avatar"
-                      />
+                      <img src="assets/images/doj-logo.svg" alt="doj-avatar" />
                     </div>
                   </div>
                   <div class="review-content">
@@ -938,7 +930,11 @@
       <section id="Specialise">
         <div class="specialise-wrapper section-spacing overflow-hidden">
           <div class="container">
-            <div class="specialise-top section-title" data-aos="fade-down">
+            <div
+              class="specialise-top section-title"
+              data-aos="fade-down"
+              data-aos-duration="1000"
+            >
               <h2>
                 We specialise in Debt Collection and recovery services for local
                 Tasmanians
@@ -980,12 +976,19 @@
             </div>
             <div class="row specialise-cards">
               <div class="col-lg-6">
-                <div class="specialise-card" data-aos="zoom-in-right">
-                  <img
-                    loading="lazy"
-                    src="assets/images/hobart-thumb.webp"
-                    alt="hobart-thumb"
-                  />
+                <div
+                  class="specialise-card"
+                  data-aos="zoom-in-right"
+                  data-aos-duration="1000"
+                >
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/hobart.html"
+                  >
+                    <img
+                      src="assets/images/hobart-thumb.webp"
+                      alt="hobart-thumb"
+                    />
+                  </a>
                   <div class="learn-more-btn">
                     <a
                       href="https://www.debtcollectionexperts.com.au/hobart.html"
@@ -999,11 +1002,12 @@
                   class="specialise-card pt-5 pt-lg-0"
                   data-aos="zoom-in-left"
                 >
-                  <img
-                    loading="lazy"
-                    src="assets/images/launceston-thumb.webp"
-                    alt="launceston-thumb"
-                  />
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/launceston.html"
+                    ><img
+                      src="assets/images/launceston-thumb.webp"
+                      alt="launceston-thumb"
+                  /></a>
                   <div class="learn-more-btn">
                     <a
                       href="https://www.debtcollectionexperts.com.au/launceston.html"
@@ -1024,7 +1028,11 @@
       <section id="Work">
         <div class="work-wrapper section-spacing overflow-hidden">
           <div class="container">
-            <div class="work-top section-title" data-aos="fade-down">
+            <div
+              class="work-top section-title"
+              data-aos="fade-down"
+              data-aos-duration="1000"
+            >
               <h2>How does Debt Collection recovery services work?</h2>
               <p>
                 Our four-step approach begins with a thorough assessment of the
@@ -1032,12 +1040,11 @@
                 negotiate repayment terms.
               </p>
             </div>
-            <div class="row" data-aos="fade-up">
+            <div class="row" data-aos="fade-up" data-aos-duration="1000">
               <div class="col-md-6 col-lg-3">
                 <div class="work-card">
                   <div class="work-card-img position-relative">
                     <img
-                      loading="lazy"
                       src="assets/images/assesment-img.webp"
                       alt="assesment-img"
                     />
@@ -1060,7 +1067,6 @@
                 <div class="work-card">
                   <div class="work-card-img position-relative">
                     <img
-                      loading="lazy"
                       src="assets/images/communication-img.webp"
                       alt="communication-img"
                     />
@@ -1083,7 +1089,6 @@
                 <div class="work-card">
                   <div class="work-card-img position-relative">
                     <img
-                      loading="lazy"
                       src="assets/images/negotiation-img.webp"
                       alt="negotiation-img"
                     />
@@ -1107,7 +1112,6 @@
                 <div class="work-card">
                   <div class="work-card-img position-relative">
                     <img
-                      loading="lazy"
                       src="assets/images/enforcement-img.webp"
                       alt="enforcement-img"
                     />
@@ -1140,7 +1144,11 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-6">
-                <div class="faq-content" data-aos="flip-left">
+                <div
+                  class="faq-content"
+                  data-aos="flip-left"
+                  data-aos-duration="1000"
+                >
                   <h2>Debt Collection Experts - Frequently Asked Questions.</h2>
                   <p>
                     Here are some frequently asked questions (FAQs) that might
@@ -1150,7 +1158,11 @@
                 </div>
               </div>
               <div class="col-lg-6">
-                <div class="accordion-container" data-aos="flip-right">
+                <div
+                  class="accordion-container"
+                  data-aos="flip-right"
+                  data-aos-duration="1000"
+                >
                   <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
