--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             >
               <div class="logo">
                 <a href="https://www.debtcollectionexperts.com.au"
-                  ><img src="assets/images/logo.svg" alt="logo"
+                  ><img
+                    src="assets/images/logo.svg"
+                    alt="Debt Collection Experts logo"
                 /></a>
               </div>
               <div class="main-menu-wrapper d-flex justify-content-between">
@@ -167,7 +169,9 @@
           </div>
           <div class="mobile-logo">
             <a href="https://www.debtcollectionexperts.com.au"
-              ><img src="assets/images/logo.svg" alt="logo"
+              ><img
+                src="assets/images/logo.svg"
+                alt="Debt Collection Experts logo"
             /></a>
           </div>
           <div class="mobile-call">
