--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://www.debtcollectionexperts.com.au/services"
+                        href="https://www.debtcollectionexperts.com.au/our-services.html"
                       >
                         Our Services +</a
                       >
@@ -339,7 +339,7 @@
       <section id="Hero">
         <div class="hero-wrapper overflow-hidden">
           <div class="container">
-            <div class="hero-container position-relative">
+            <div class="hero-container home-hero-container position-relative">
               <div
                 class="hero-content"
                 data-aos="fade-up"
