--- a/contact-us.html
+++ b/contact-us.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Debt Collection Experts - Contact Us</title>
+    <title>
+      Debt Collection Services in Hobart and Launceston | Debt Collection
+      Experts
+    </title>
+    <meta
+      name="description"
+      content="Debt Collection Experts specialises in Debt Collection and Debt Recovery services, Small Business and Commercial Debt Collection, in Hobart and Launceston"
+    />
+    <link rel="canonical" href="https://www.debtcollectionexperts.com.au/" />
+    <meta
+      property="og:title"
+      content="Debt Collection Services in Hobart and Launceston | Debt Collection Experts"
+    />
+    <meta
+      property="og:description"
+      content="Debt Collection Experts specialises in Debt Collection and Debt Recovery services, Small Business and Commercial Debt Collection, in Hobart and Launceston"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://www.debtcollectionexperts.com.au/"
+    />
+    <meta property="og:site_name" content="Debt Collection Experts" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
 
     <!-- Font Awesome CDN -->
     <link
@@ -262,40 +289,40 @@
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/excavatehobart"
+                    href="https://www.facebook.com/debtcollectionexpertsinfo"
                     ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.instagram.com/excavatehobart"
+                    href="https://www.instagram.com/debtcollectionexperts"
                     ><i class="fa-brands fa-instagram"></i
                   ></a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://twitter.com/excavatehobart"
+                  <a target="_blank" href="https://twitter.com/debtcollectione"
                     ><i class="fa-brands fa-x-twitter"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.linkedin.com/company/excavatehobart"
+                    href="https://www.linkedin.com/company/debtcollectionexperts_"
                     ><i class="fa-brands fa-linkedin"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.youtube.com/@excavatehobart"
+                    href="https://www.youtube.com/@debtcollectionexperts"
                     ><i class="fa-brands fa-youtube"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.pinterest.com/excavatehobart"
+                    href="https://www.pinterest.com/debtcollectionexperts"
                     ><i class="fa-brands fa-pinterest"></i
                   ></a>
                 </li>
@@ -449,40 +476,49 @@
               data-aos-duration="1000"
             >
               <form
-                action="https://docs.google.com/forms/d/e/1FAIpQLScmGy5PItLYsc8_POblzUp9L60371r8BqW1UYYE4mremwIJ0A/formResponse"
+                action="https://docs.google.com/forms/d/e/1FAIpQLSejHDxIgLOB0f_qsebhmqzSIcC58O2fCoUNZY0fH1SL106CJQ/formResponse"
               >
                 <div class="contact-from">
                   <div class="contact-input-field">
-                    <label for="entry.1880918635">Contact name</label>
+                    <label for="entry.2005620554">You full name</label>
                     <input
                       type="text"
-                      name="entry.1880918635"
+                      name="entry.2005620554"
                       placeholder="Type here"
                       required
                     />
                   </div>
                   <div class="contact-input-field">
-                    <label for="entry.1241255447">Mobile number</label>
+                    <label for="entry.1166974658">Mobile number</label>
                     <input
                       type="number"
-                      name="entry.1241255447"
+                      name="entry.1166974658"
                       placeholder="Type here"
                       required
                     />
                   </div>
                   <div class="contact-input-field">
-                    <label for="entry.2000695782">Email address</label>
-                    <input
-                      type="email"
-                      name="entry.2000695782"
-                      placeholder="Type here"
-                      required
-                    />
+                    <label for="entry.1995446704"
+                      >Is this for your business or personal? *</label
+                    >
+                    <div class="d-flex">
+                      <div class="radio py-3">
+                        <input type="radio" name="entry.1995446704" required />
+                        <label for="entry.1995446704">Business</label>
+                      </div>
+                      <div class="radio py-3 ps-4">
+                        <input type="radio" name="entry.1995446704" required />
+                        <label for="entry.1995446704">Personal</label>
+                      </div>
+                    </div>
                   </div>
                   <div class="contact-input-field">
-                    <label for="entry.136170699">Message</label>
+                    <label for="entry.839337160"
+                      >Please provide the amount of debts and the approximate
+                      amount owed:</label
+                    >
                     <textarea
-                      name="entry.136170699"
+                      name="entry.839337160"
                       rows="5"
                       placeholder="Type here"
                     ></textarea>
@@ -1038,42 +1074,42 @@
             <div class="footer-social">
               <ul class="d-flex">
                 <li>
-                  <a target="_blank" href="https://twitter.com/excavatehobart"
-                    ><i class="fa-brands fa-x-twitter"></i
-                  ></a>
-                </li>
-                <li>
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/excavatehobart"
+                    href="https://www.facebook.com/debtcollectionexpertsinfo"
                     ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.instagram.com/excavatehobart"
+                    href="https://www.instagram.com/debtcollectionexperts"
                     ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://twitter.com/debtcollectione"
+                    ><i class="fa-brands fa-x-twitter"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.linkedin.com/company/excavatehobart"
+                    href="https://www.linkedin.com/company/debtcollectionexperts_"
                     ><i class="fa-brands fa-linkedin"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.youtube.com/@excavatehobart"
+                    href="https://www.youtube.com/@debtcollectionexperts"
                     ><i class="fa-brands fa-youtube"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.pinterest.com/excavatehobart"
+                    href="https://www.pinterest.com/debtcollectionexperts"
                     ><i class="fa-brands fa-pinterest"></i
                   ></a>
                 </li>
