--- a/error.html
+++ b/error.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Debt Collection Experts - Error Page</title>
+    <title>
+      Debt Collection Services in Hobart and Launceston | Debt Collection
+      Experts
+    </title>
+    <meta
+      name="description"
+      content="Debt Collection Experts specialises in Debt Collection and Debt Recovery services, Small Business and Commercial Debt Collection, in Hobart and Launceston"
+    />
+    <link rel="canonical" href="https://www.debtcollectionexperts.com.au/" />
+    <meta
+      property="og:title"
+      content="Debt Collection Services in Hobart and Launceston | Debt Collection Experts"
+    />
+    <meta
+      property="og:description"
+      content="Debt Collection Experts specialises in Debt Collection and Debt Recovery services, Small Business and Commercial Debt Collection, in Hobart and Launceston"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://www.debtcollectionexperts.com.au/"
+    />
+    <meta property="og:site_name" content="Debt Collection Experts" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
 
     <!-- Font Awesome CDN -->
     <link
@@ -256,40 +283,40 @@
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/excavatehobart"
+                    href="https://www.facebook.com/debtcollectionexpertsinfo"
                     ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.instagram.com/excavatehobart"
+                    href="https://www.instagram.com/debtcollectionexperts"
                     ><i class="fa-brands fa-instagram"></i
                   ></a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://twitter.com/excavatehobart"
+                  <a target="_blank" href="https://twitter.com/debtcollectione"
                     ><i class="fa-brands fa-x-twitter"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.linkedin.com/company/excavatehobart"
+                    href="https://www.linkedin.com/company/debtcollectionexperts_"
                     ><i class="fa-brands fa-linkedin"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.youtube.com/@excavatehobart"
+                    href="https://www.youtube.com/@debtcollectionexperts"
                     ><i class="fa-brands fa-youtube"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.pinterest.com/excavatehobart"
+                    href="https://www.pinterest.com/debtcollectionexperts"
                     ><i class="fa-brands fa-pinterest"></i
                   ></a>
                 </li>
@@ -510,42 +537,42 @@
             <div class="footer-social">
               <ul class="d-flex">
                 <li>
-                  <a target="_blank" href="https://twitter.com/excavatehobart"
-                    ><i class="fa-brands fa-x-twitter"></i
-                  ></a>
-                </li>
-                <li>
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/excavatehobart"
+                    href="https://www.facebook.com/debtcollectionexpertsinfo"
                     ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.instagram.com/excavatehobart"
+                    href="https://www.instagram.com/debtcollectionexperts"
                     ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://twitter.com/debtcollectione"
+                    ><i class="fa-brands fa-x-twitter"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.linkedin.com/company/excavatehobart"
+                    href="https://www.linkedin.com/company/debtcollectionexperts_"
                     ><i class="fa-brands fa-linkedin"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.youtube.com/@excavatehobart"
+                    href="https://www.youtube.com/@debtcollectionexperts"
                     ><i class="fa-brands fa-youtube"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.pinterest.com/excavatehobart"
+                    href="https://www.pinterest.com/debtcollectionexperts"
                     ><i class="fa-brands fa-pinterest"></i
                   ></a>
                 </li>
