--- a/our-services.html
+++ b/our-services.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Debt Collection Experts - Debt Collection Services</title>
+    <title>
+      Debt Collection Services in Hobart and Launceston | Debt Collection
+      Experts
+    </title>
+    <meta
+      name="description"
+      content="Debt Collection Experts specialises in Debt Collection and Debt Recovery services, Small Business and Commercial Debt Collection, in Hobart and Launceston"
+    />
+    <link rel="canonical" href="https://www.debtcollectionexperts.com.au/" />
+    <meta
+      property="og:title"
+      content="Debt Collection Services in Hobart and Launceston | Debt Collection Experts"
+    />
+    <meta
+      property="og:description"
+      content="Debt Collection Experts specialises in Debt Collection and Debt Recovery services, Small Business and Commercial Debt Collection, in Hobart and Launceston"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://www.debtcollectionexperts.com.au/"
+    />
+    <meta property="og:site_name" content="Debt Collection Experts" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
 
     <!-- Font Awesome CDN -->
     <link
@@ -258,40 +285,40 @@
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/excavatehobart"
+                    href="https://www.facebook.com/debtcollectionexpertsinfo"
                     ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.instagram.com/excavatehobart"
+                    href="https://www.instagram.com/debtcollectionexperts"
                     ><i class="fa-brands fa-instagram"></i
                   ></a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://twitter.com/excavatehobart"
+                  <a target="_blank" href="https://twitter.com/debtcollectione"
                     ><i class="fa-brands fa-x-twitter"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.linkedin.com/company/excavatehobart"
+                    href="https://www.linkedin.com/company/debtcollectionexperts_"
                     ><i class="fa-brands fa-linkedin"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.youtube.com/@excavatehobart"
+                    href="https://www.youtube.com/@debtcollectionexperts"
                     ><i class="fa-brands fa-youtube"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.pinterest.com/excavatehobart"
+                    href="https://www.pinterest.com/debtcollectionexperts"
                     ><i class="fa-brands fa-pinterest"></i
                   ></a>
                 </li>
@@ -1161,13 +1188,13 @@
                 requirements, with expertise in the following areas:
               </p>
             </div>
-            <div class="client-needs-card-container">
+            <div
+              class="client-needs-card-container"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
               <div class="row justify-content-center g-4 g-lg-5">
-                <div
-                  class="col-md-6"
-                  data-aos="fade-right"
-                  data-aos-duration="1000"
-                >
+                <div class="col-md-6">
                   <div class="client-needs-card">
                     <ol>
                       <li>Commercial Debt Collection:</li>
@@ -1182,11 +1209,7 @@
                     </ol>
                   </div>
                 </div>
-                <div
-                  class="col-md-6"
-                  data-aos="fade-left"
-                  data-aos-duration="1000"
-                >
+                <div class="col-md-6">
                   <div class="client-needs-card">
                     <ol>
                       <li>Student Loan Debt Collection</li>
@@ -1715,42 +1738,42 @@
             <div class="footer-social">
               <ul class="d-flex">
                 <li>
-                  <a target="_blank" href="https://twitter.com/excavatehobart"
-                    ><i class="fa-brands fa-x-twitter"></i
-                  ></a>
-                </li>
-                <li>
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/excavatehobart"
+                    href="https://www.facebook.com/debtcollectionexpertsinfo"
                     ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.instagram.com/excavatehobart"
+                    href="https://www.instagram.com/debtcollectionexperts"
                     ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://twitter.com/debtcollectione"
+                    ><i class="fa-brands fa-x-twitter"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.linkedin.com/company/excavatehobart"
+                    href="https://www.linkedin.com/company/debtcollectionexperts_"
                     ><i class="fa-brands fa-linkedin"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.youtube.com/@excavatehobart"
+                    href="https://www.youtube.com/@debtcollectionexperts"
                     ><i class="fa-brands fa-youtube"></i
                   ></a>
                 </li>
                 <li>
                   <a
                     target="_blank"
-                    href="https://www.pinterest.com/excavatehobart"
+                    href="https://www.pinterest.com/debtcollectionexperts"
                     ><i class="fa-brands fa-pinterest"></i
                   ></a>
                 </li>
